Added parsing of file into a structure for later use

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ cpp_base/.metadata/.log
 cpp_base/.metadata/.plugins/*
 
 .gitignore.swp
+
+cpp_base/BeerController/.settings/*
+
+cpp_base/BeerController/.cproject
+
+cpp_base/BeerController/.cproject
+
+cpp_base/BeerController/.cproject
+
+cpp_base/BeerController/.cproject
