--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ cpp_base/BeerController/.cproject
 cpp_base/BeerController/.cproject
 
 cpp_base/BeerController/.cproject
+
+sensor_output/outputBeerLog.dat
+
+cpp_base/BeerController/.cproject
