Another update for stats output

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ cpp_base/BeerController/.cproject
 sensor_output/outputBeerLog.dat
 
 cpp_base/BeerController/.cproject
+
+cpp_base/BeerController/.cproject
